# ML-Engineering-Project

./: .gitignore  README.md  cifar10.dvc  dataset_registry.csv  dvc.yaml  githooks.yml  pyproject.toml
src/: config.yaml  utils.py
src/dataset/: augmentations.py  dataset.py  extract_data.py  load_data.py
src/train_eval/: eval.py  train.py  utils.py
